# hid-io-core

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs  crates.js  deny.toml  deploy.bash  deploy.sh  hid-io.service  hidio.plist  schema  settings.html  source-files.js  test.py  test.sh  uninstall_service.bat  vt.sh
addr2line/: struct.LocationRangeIter.html
aho_corasick/: struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html
ansi_term/: struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Suffix.html
arraydeque/: all.html  index.html  sidebar-items.js  struct.ArrayDeque.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  trait.Array.html  trait.RangeArgument.html
as_slice/: all.html  index.html  trait.AsMutSlice.html  trait.AsSlice.html
base64/: all.html  constant.BCRYPT.html  constant.BINHEX.html  constant.CRYPT.html  constant.IMAP_MUTF7.html  constant.STANDARD.html  constant.STANDARD_NO_PAD.html  constant.URL_SAFE.html  constant.URL_SAFE_NO_PAD.html  enum.CharacterSet.html  enum.DecodeError.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.decode_config_slice.html  fn.encode.html  fn.encode_config.html  fn.encode_config_buf.html  fn.encode_config_slice.html  index.html  struct.Config.html
bincode_core/: all.html  enum.BufferWriterError.html  enum.DeserializeError.html  enum.SerializeError.html  fn.deserialize.html  fn.serialize.html  fn.serialize_size.html  index.html  sidebar-items.js  struct.BufferWriter.html  trait.CoreRead.html  trait.CoreWrite.html
bytes/: struct.Bytes.html  struct.BytesMut.html
capnp/: all.html  enum.ErrorKind.html  enum.OutputSegments.html  fn.word.html  index.html  sidebar-items.js  struct.Error.html  struct.MessageSize.html  struct.NotInSchema.html  struct.Word.html  type.Result.html
capnp_futures/: all.html  fn.write_queue.html  index.html  sidebar-items.js  struct.ReadStream.html  struct.Sender.html
capnp_rpc/: all.html  fn.new_client.html  fn.new_promise_client.html  index.html  macro.pry!.html  macro.pry.html  sidebar-items.js  struct.Disconnector.html  struct.ImbuedMessageBuilder.html  struct.RpcSystem.html  trait.Connection.html  trait.IncomingMessage.html  trait.OutgoingMessage.html  trait.VatNetwork.html
chrono/: enum.Month.html  enum.RoundingError.html  enum.Weekday.html  struct.Date.html  struct.DateTime.html  struct.Duration.html
clap/: enum.Shell.html  struct.App.html  struct.Error.html  struct.OsValues.html  struct.Values.html
ctrlc/: all.html  enum.Error.html  enum.SignalType.html  fn.set_handler.html  index.html  type.Signal.html
derivative/: all.html  derive.Derivative.html  index.html
dlib/: all.html  enum.DlError.html  enum.LibLoadingError.html  index.html  macro.external_library.html  macro.ffi_dispatch.html  macro.ffi_dispatch_static.html
enumflags2/: all.html  index.html  struct.BitFlags.html  struct.FromBitsError.html  trait.RawBitFlags.html
enumflags2_derive/: all.html  derive.BitFlags_internal.html  index.html
evdev_rs/: all.html  enum.GrabMode.html  enum.LedState.html  enum.ReadStatus.html  index.html  sidebar-items.js  struct.AbsInfo.html  struct.Device.html  struct.DeviceId.html  struct.InputEvent.html  struct.ReadFlag.html  struct.TimeVal.html  struct.UInputDevice.html
evdev_sys/: all.html  constant.LIBEVDEV_GRAB.html  constant.LIBEVDEV_LED_OFF.html  constant.LIBEVDEV_LED_ON.html  constant.LIBEVDEV_LOG_DEBUG.html  constant.LIBEVDEV_LOG_ERROR.html  constant.LIBEVDEV_LOG_INFO.html  constant.LIBEVDEV_READ_FLAG_BLOCKING.html  constant.LIBEVDEV_READ_FLAG_FORCE_SYNC.html  constant.LIBEVDEV_READ_FLAG_NORMAL.html  constant.LIBEVDEV_READ_FLAG_SYNC.html  constant.LIBEVDEV_READ_STATUS_SUCCESS.html  constant.LIBEVDEV_READ_STATUS_SYNC.html  constant.LIBEVDEV_UINPUT_OPEN_MANAGED.html  constant.LIBEVDEV_UNGRAB.html  enum.libevdev.html  enum.libevdev_uinput.html  fn.libevdev_change_fd.html  fn.libevdev_disable_event_code.html  fn.libevdev_disable_event_type.html  fn.libevdev_enable_event_code.html  fn.libevdev_enable_event_type.html  fn.libevdev_enable_property.html  fn.libevdev_event_code_from_name.html  fn.libevdev_event_code_from_name_n.html  fn.libevdev_event_code_get_name.html  fn.libevdev_event_is_code.html  fn.libevdev_event_is_type.html  fn.libevdev_event_type_from_name.html  fn.libevdev_event_type_from_name_n.html  fn.libevdev_event_type_get_max.html  fn.libevdev_event_type_get_name.html  fn.libevdev_fetch_event_value.html  fn.libevdev_fetch_slot_value.html  fn.libevdev_free.html  fn.libevdev_get_abs_flat.html  fn.libevdev_get_abs_fuzz.html  fn.libevdev_get_abs_info.html  fn.libevdev_get_abs_maximum.html  fn.libevdev_get_abs_minimum.html  (+69 more)
examples/: lsnodes.rs  rpc.rs  tool.rs  unicode.rs  watchnodes.rs
failure/: all.html  fn.err_msg.html  index.html  macro.bail.html  macro.ensure.html  macro.format_err.html  struct.Backtrace.html  struct.Causes.html  struct.Compat.html  (+7 more)
hid-io-client/: CHANGELOG.md  Cargo.toml  README.md
hid-io-client-ffi/: Cargo.toml  README.md
hid-io-client-ffi/src/: lib.rs
hid-io-client/examples/: lsnodes.rs  rpc.rs  tool.rs  watchnodes.rs
hid-io-client/src/: lib.rs
hid-io-kiibohd/: Cargo.toml  README.md  cbindgen.toml
hid-io-kiibohd/src/: lib.rs
hid-io-protocol/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
hid-io-protocol/spec/: README.md
hid-io-protocol/src/: buffer.rs  commands.rs  lib.rs  test.rs
hid-io-protocol/src/commands/: mod.rs  test.rs
python/: LICENSE  Pipfile  README.md  example.py  pyproject.toml  requirements.txt
python/examples/: info.py  unicode_text.py
python/hidio/client/: __init__.py
python/hidiocore/: __init__.py
python/hidiocore/client/: __init__.py
python/hidiocore/schema/: common.capnp  daemon.capnp  devicefunction.capnp  hidio.capnp  hidiowatcher.capnp  hostmacro.capnp  keyboard.capnp  usbkeyboard.capnp
python/tests/: example.py  test_examples.py
(+28765 files in other folders)
