[package]
name          = "hid-io-core"
version       = "0.1.0-beta3"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "GPL-3.0-or-later"
description   = """
HID-IO is a host-side daemon for advanced HID devices.
"""

homepage      = "https://github.com/hid-io/hid-io-core"
repository    = "https://github.com/hid-io/hid-io-core"
documentation = "https://hid-io.github.io/hid-io/hid_io/"

edition       = "2018"
build         = "build.rs"
default-run   = "hid-io-core"


[features]
default = ["unicode"]
unicode = []


[build-dependencies]
built           = { version = "^0.4", features = ["git2", "chrono"] }
capnpc          = "^0.13"
rustc_version   = "^0.2"


[dependencies]
bincode         = "^1.3"
capnp           = "^0.13"
capnp-rpc       = "^0.13"
clap            = "^2.33"
ctrlc           = "^3.1"
daemon          = "0.0.8"
lazy_static     = "^1.4"
flexi_logger    = "^0.16"
futures         = "^0.3"
futures-util    = "^0.3"
glob            = "^0.3"
libc            = "^0.2"
log             = "^0.4"
nanoid          = "^0.3"
num_enum        = "^0.5"
open            = "^1.4"
rand            = "^0.7"
rcgen           = "^0.5"
regex           = "^1.3"
rustls          = { version = "^0.18", features = ["dangerous_configuration"] }
serde           = "1.0.117"
stream-cancel   = "^0.6"
sys-info        = "^0.7"
#tempfile        = "3.1.0"
tempfile        = { git = "https://github.com/haata/tempfile" } # Needed for world accessible patches
tokio           = { version = "^0.3", features = ["net", "rt-multi-thread", "macros", "sync", "stream", "time"] }
tokio-rustls    = "^0.20"
tokio-util      = { version = "^0.4", features = ["compat"] }
webpki          = "^0.21"
windows-service = "^0.3"


[dev-dependencies.cargo-husky]
version = "1"
features = ["prepush-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"]


[dependencies.hidapi]
git = "https://github.com/hid-io/hidapi-rs"
#version = "1.1.1"
default-features = false
features=["linux-static-hidraw"]


[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs  = "^0.4"
udev      = "^0.5"
uhid-virt = "0.0.5"
xkbcommon = { version = "^0.4", features = ["x11"] }
x11       = "^2.18"


[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["std", "winuser", "winnls"] }


[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "^0.9"
core-graphics = "^0.22"


[package.metadata.bundle]
identifier = "io.github.hid-io.hid-io-core"
category = "public.app-category.utilities"
icon = ["128x128.png"]
resources = ["hid-io-core.service"]


[profile.release]
panic = "abort" #windows
