[package]
name          = "hid-io-core"
version       = "0.1.0"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "GPL-3.0-or-later"
description   = """
HID-IO is a host-side daemon for advanced HID devices.
"""

homepage      = "https://github.com/hid-io/hid-io-core"
repository    = "https://github.com/hid-io/hid-io-core"
documentation = "https://hid-io.github.io/hid-io-core/hid_io_core/"

edition       = "2018"
build         = "build.rs"
default-run   = "hid-io-core"


[workspace]
members = [
  "hid-io-kiibohd",
  "hid-io-protocol",
]


[features]
default = ["api", "dev-capture", "displayserver", "hidapi-devices", "vhid"]
# api handles socket interfaces for HID-IO
# e.g. capnproto interface
# Disabling will reduce compile times
api = [
  "capnp",
  "capnpc",
  "capnp-rpc",
  "futures",
  "futures-util",
  "glob",
  "nanoid",
  "rcgen",
  "rustls",
  "tempfile",
  "tokio-rustls",
  "tokio-util",
]
# dev_capture handles any HID event capturing for standard input devices
# Disabling will reduce compile times
dev-capture = [
  "evdev-rs",
  "libc",
  "nanoid",
  "udev",
]
# displayserver interacts with the OS display server (e.g. winapi, quartz, x11, wayland)
# Disabling will reduce compile times
displayserver = [
  "core-foundation",
  "core-graphics",
  "memmap",
  "tempfile",
  "wayland-client",
  "winapi",
  "winreg",
  "x11",
  "xkbcommon",
  "zwp-virtual-keyboard",
]
# hidapi_devices allows for communication directly with hid-io supported devices
# This should be enabled in most scenarios unless you know what you are doing.
# Disabling will reduce compile times
hidapi-devices = [
  "hidapi",
  "regex",
]
# vhid (virtual hid) allows for the creation of virtual hid devices.
# This is needed to support virtual devices such as virtual joysticks, mice and keyboards
# Disabling will reduce compile times
vhid = [
  "libc",
  "nanoid",
  "udev",
  "uhid-virt",
]


[build-dependencies]
built           = { version = "^0.4", features = ["git2", "chrono"] }
capnpc          = { version = "^0.13", optional = true }
rustc_version   = "^0.2"


[dependencies]
bincode         = "^1.3"
capnp           = { version = "^0.13", optional = true }
capnp-rpc       = { version = "^0.13", optional = true }
clap            = "^2.33"
ctrlc           = "^3.1"
lazy_static     = "^1.4"
flexi_logger    = "^0.16"
futures         = { version = "^0.3", optional = true }
futures-util    = { version = "^0.3", optional = true }
glob            = { version = "^0.3", optional = true }
heapless        = { version = "^0.5" }
hidapi          = { version = "1.2.4", default-features = false, features = ["linux-static-hidraw"], optional = true }
hid-io-protocol = { path = "hid-io-protocol" }
libc            = { version = "^0.2", optional = true }
log             = "^0.4"
nanoid          = { version = "^0.3", optional = true }
num_enum        = "^0.5"
open            = "^1.4"
rcgen           = { version = "^0.5", optional = true }
regex           = { version = "^1.3", optional = true }
rustls          = { version = "^0.18", optional = true, features = ["dangerous_configuration"] }
serde           = "1.0.118"
sys-info        = "^0.7"
#tempfile        = { version = "3.1.0", optional = true }
tempfile        = { git = "https://github.com/haata/tempfile", optional = true } # Needed for world accessible patches
tokio           = { version = "^0.3", features = ["net", "rt-multi-thread", "macros", "sync", "stream", "time"] }
tokio-rustls    = { version = "^0.20", optional = true }
tokio-util      = { version = "^0.4", optional = true, features = ["compat"] }


[dev-dependencies]
rand            = "^0.7"
webpki          = "^0.21"


[dev-dependencies.cargo-husky]
version = "1"
features = ["prepush-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"]


[target.'cfg(target_os = "linux")'.dependencies]
evdev-rs             = { version = "^0.4", optional = true }
memmap               = { version = "^0.7", optional = true }
udev                 = { version = "^0.5", optional = true }
uhid-virt            = { version = "0.0.5", optional = true }
wayland-client       = { version = "^0.28", optional = true, features = ["use_system_lib"] }
xkbcommon            = { version = "^0.4", optional = true, features = ["x11"] }
x11                  = { version = "^2.18", optional = true }
zwp-virtual-keyboard = { version = "^0.2", optional = true }


[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", optional = true, features = ["std", "winuser", "winnls"] }
winreg = { version = "^0.7", optional = true }
windows-service = "^0.3"


[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { version = "^0.9", optional = true }
core-graphics = { version = "^0.22", optional = true }


[package.metadata.bundle]
identifier = "io.github.hid-io.hid-io-core"
category = "public.app-category.utilities"
icon = ["128x128.png"]
resources = ["hid-io-core.service"]


[profile.release]
panic = "abort" #windows
