[package]
name          = "hid-io-kiibohd"
version       = "0.1.0"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "MIT"
description   = """
HID-IO protocol implementation for the C kiibohd firmware.
Device Cortex-M implementation.
"""

homepage      = "https://github.com/hid-io/hid-io-core"
repository    = "https://github.com/hid-io/hid-io-core"
documentation = "https://hid-io.github.io/hid-io-core/hid_io_core/"

edition = "2018"

[lib]
name = "hid_io_kiibohd"

[dependencies]
cstr_core       = { version = "^0.2", default-features = false }
heapless        = { version = "^0.5" }
hid-io-protocol = { path = "../hid-io-protocol", default-features = false, features = ["device"] }
pkg-version     = { version = "^1.0" }
typenum         = { version = "^1.12", features = ["no_std"] }
