[package]
name          = "hid-io-protocol"
version       = "0.1.1"
authors       = ["Jacob Alexander <haata@kiibohd.com>"]
license       = "MIT OR Apache-2.0"
description   = """
HID-IO protocol implementation for both servers and devices.
Devices are optimized for Cortex-M devices, but may work for other platforms.
"""

categories    = ["embedded", "no-std"]
homepage      = "https://github.com/hid-io/hid-io-core"
repository    = "https://github.com/hid-io/hid-io-core"
edition       = "2021"


[lib]
name = "hid_io_protocol"


[features]
default = ["server"]

# device feature is intended for embedded devices such as a Cortex-M4 device
# Strictly no_std
device = []

# server feature is intended for use with full user-space applications
# with access to std for loggging messages
# Mostly no_std with some minor exceptions
server = []

# Adds defmt support to useful enums and structs
defmt = ["dep:defmt", "heapless/defmt-impl", "kll-core/defmt"]


[dependencies]
arraydeque      = { version = "0.4", default-features = false }
defmt           = { version = "0.3", optional = true }
heapless        = { version = "0.7" }
kll-core        = { version = "0.1" }
log             = { version = "0.4", default-features = false }
num_enum        = { version = "0.5", default-features = false }


[dev-dependencies]
flexi_logger    = "^0.16"
