[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hidio"
author = "Jacob Alexander"
author-email = "haata@kiibohd.com"
home-page = "https://github.com/kiibohd/kll"
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
description-file = "README.md"
requires = [
    "cython>=0.29.12",
    "pycapnp==0.6.4",
]
requires-python = ">=3.7"

